--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-scripts": "4.0.0",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "rm": "^0.1.8",
     "web-vitals": "^0.2.4"
   },
